--- a/index.html
+++ b/index.html
@@ -1,12 +1,59 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title></title>
+		<title>Fadelicious</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="style.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
+
+        <!--Header-->
+
+
+        <div class="container_full">
+			<div class="fix container">
+				<header id="header">
+                    <div class="logo">
+                        <h1>Fadelicious</h1>
+                    </div>
+
+                    <nav class="menu">
+                        <ul>
+                            <li>
+                                <a href="#">Home</a>
+                            </li>
+
+                            <li>
+                                <a href="#">Blog</a>
+                            </li>
+
+                            <li>
+                                <a href="#">Portfolio</a>
+                            </li>
+
+                            <li>
+                                <a href="#">Services</a>
+                            </li>
+
+                            <li>
+                                <a href="#">Contact</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </header>
+			</div>
+		</div>	
+		
+
+
+
+
+
+
+
+
+
 		<!--
 		
 		<div class="container_full">
@@ -17,6 +64,6 @@
 		
 		-->
 		
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>		
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>	
 	</body>
 </html>
