--- a/index.html
+++ b/index.html
@@ -118,6 +118,52 @@
 </div>	
 
 
+<!--about us-->
+
+<div class="container_full">
+    <div class="fix container">
+        <div class="content_wrapper">
+            <div class="content_left">
+                <article id="about_us">
+                    <h2 class="about_us_h2">About Us</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, error totam! Libero quibusdam minus, fuga nisi blanditiis alias cupiditate hic asperiores nam ratione? Harum, minus pariatur. Earum laborum soluta repellat.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, eius deserunt. Ipsam consequuntur, debitis fuga quod, eius error incidunt, tempore enim fugit magnam doloribus reprehenderit distinctio repudiandae exercitationem necessitatibus voluptate?</p>
+                </article>
+            </div>
+
+            <div class="content_right">
+                <h2 class="content_right_h2">Latest Work</h2>
+                <ul>
+                    <li>
+                        <a href="#">
+                            <img src="img/latest_work_img.png" alt="">
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="#">
+                            <img src="img/latest_work_img.png" alt="">
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="#">
+                            <img src="img/latest_work_img.png" alt="">
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="#">
+                            <img src="img/latest_work_img.png" alt="">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>	
+
+
 
 		<!--
 		
