--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="Nivo-Slider-master/themes/bar/bar.css" type="text/css" media="screen" />
         <link rel="stylesheet" href="Nivo-Slider-master/nivo-slider.css" type="text/css" media="screen" />
         <link href="style.css" rel="stylesheet" type="text/css" />
+	</head>
 	<body>
 
         <!--Header-->
@@ -163,6 +164,70 @@
     </div>
 </div>	
 
+
+<!--footer top-->
+
+<div class="container_full">
+    <div class="fix container">
+        <div class="footer_top">
+            <div class="single_footer_area">
+                <h2>Recent Post</h2>
+                <ul>
+                    <li>
+                        <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+                    </li>
+                    <li>
+                        <a href="#">Eum id vitae voluptatibus</a>
+                    </li>
+                    <li>
+                        <a href="#">quo aut veritatis praesentium ea</a>
+                    </li>
+                    <li>
+                        <a href="#">esse ad quis nulla dolores sit,</a>
+                    </li>
+                    <li>
+                        <a href="#">sint assumenda dignissimos laboriosam!</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="single_footer_area">
+                <h2>Archives</h2>
+                <ul>
+                    <li>
+                        <a href="#">January 2020</a>
+                    </li>
+                    <li>
+                        <a href="#">February 2020</a>
+                    </li>
+                    <li>
+                        <a href="#">March 2020</a>
+                    </li>
+                    <li>
+                        <a href="#">April 2020</a>
+                    </li>
+                    <li>
+                        <a href="#">May 2020</a>
+                    </li>
+                    <li>
+                        <a href="#">June 2020</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="single_footer_area">
+                <h2>Twitter</h2>
+                <div class="twitter_section">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, deserunt <a href="#">http://bit.ly/abcdefg</a> inventore expedita eveniet laborum necessitatibus libero perspiciatis eaque exercitationem doloremque
+                        <a href="#">3 hours ago</a>
+                        <a href="#">@atwitterhandle</a>
+                    </p>
+                    <img src="img/twitter_icon.png" alt="">
+                </div>                
+            </div>
+        </div>
+    </div>
+</div>		
 
 
 		<!--
