--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="Nivo-Slider-master/themes/bar/bar.css" type="text/css" media="screen" />
         <link rel="stylesheet" href="Nivo-Slider-master/nivo-slider.css" type="text/css" media="screen" />
         <link href="style.css" rel="stylesheet" type="text/css" />
+        <script src="https://kit.fontawesome.com/4cecf34413.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
 
@@ -230,15 +231,38 @@
 </div>		
 
 
-		<!--
-		
-		<div class="container_full">
-			<div class="fix container">
-				
-			</div>
-		</div>		
-		
-		-->
+
+<!---footer-->
+
+
+<div class="container_full">
+    <div class="fix container">
+        <footer id="footer">
+            <div class="left_footer">
+                <p>&#169; Copyright 2020 <a href="https://github.com/SohanR">Mizanur Rahman</a>. All Right Reseverd</p>
+            </div>
+            <div class="right_footer">
+                <ul>
+                    <li class="social_media">
+                        <a href="https://www.facebook.com/SohanDarklord" target="_blank">
+                         <i class="fab fa-facebook-square fa-3x"></i>
+                        </a>
+                    </li>
+                    <li class="social_media">
+                         <a href="https://www.linkedin.com/in/mizanurrahman/" target="_blank">
+                             <i class="fab fa-linkedin fa-3x"></i>
+                         </a>
+                     </li>
+                     <li class="social_media">
+                         <a href="https://github.com/SohanR/" target="_blank">
+                             <i class="fab fa-github-square fa-3x"></i>
+                         </a>
+                     </li>
+                </ul>
+            </div>
+        </footer>
+    </div>
+</div>	
 		
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>	
         <script type="text/javascript" src="Nivo-Slider-master/jquery.nivo.slider.js"></script>
