google fonts linked

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="Nivo-Slider-master/nivo-slider.css" type="text/css" media="screen" />
         <link href="style.css" rel="stylesheet" type="text/css" />
         <script src="https://kit.fontawesome.com/4cecf34413.js" crossorigin="anonymous"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Baloo+Thambi+2:wght@500&display=swap" rel="stylesheet"> 
 	</head>
 	<body>
 
@@ -21,11 +22,11 @@
         <div class="container_full">
 			<div class="fix container">
 				<header id="header">
-                    <div class="logo">
+                    <div class="logo floatleft">
                         <h1>Fadelicious</h1>
                     </div>
 
-                    <nav class="menu">
+                    <nav class="menu floatright">
                         <ul>
                             <li>
                                 <a href="#">Home</a>
