--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!--Header-->
 
 
-        <div class="container_full">
+        <div class="container_full header_bg">
 			<div class="fix container">
 				<header id="header">
                     <div class="logo floatleft">
