--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <!--slider-->
 
 
-<div class="container_full">
+<div class="container_full slider_bg">
     <div class="fix container">
         <div id="slider_wrapper">
             <div class="slider-wrapper theme-default">
