--- a/index.html
+++ b/index.html
@@ -60,12 +60,14 @@
 <div class="container_full slider_bg">
     <div class="fix container">
         <div id="slider_wrapper">
-            <div class="slider-wrapper theme-light">
-                <div id="slider" class="nivoSlider">
-                   <img src="img/cat.jpg" alt="cat image">
-                   <img src="img/cat1.jpg" alt="cat image">
-                   <img src="img/cat2.jpg" alt="cat image">
-                   <img src="img/cat3.jpg" alt="cat image">
+            <div class="slider_w">
+                <div class="slider-wrapper theme-light">
+                    <div id="slider" class="nivoSlider">
+                    <img src="img/cat.jpg" alt="cat image">
+                    <img src="img/cat1.jpg" alt="cat image">
+                    <img src="img/cat2.jpg" alt="cat image">
+                    <img src="img/cat3.jpg" alt="cat image">
+                    </div>
                 </div>
             </div>
         </div>
