--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 <!--slider bottom area-->
 
-<div class="container_full">
+<div class="container_full slider_bottom_area_bg">
     <div class="fix container">
         <div class="slider_bottom_area">
             <p>Hi ! This is a Fadelicious. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ipsa, voluptate, libero cupiditate error accusamus quidem totam facere quia velit dignissimos, consequuntur nobis blanditiis? Tenetur alias voluptatem cumque iste dolorum.</p>
