column classes added

--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
 
 <!--column wrapper-->
 
-<div class="container_full">
+<div class="container_full column_wrapper_bg">
     <div class="fix container">
         <div class="column_wrapper">
-            <div class="single_column">
+            <div class="single_column col_first">
                 <img src="img/gift_box.png" alt="">
                 <h2>Package Design</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt rerum magni possimus quod et, alias vel quo, perspiciatis aliquid, sint assumenda! Doloribus culpa quas vero enim necessitatibus amet! Vitae, animi!</p>
@@ -112,7 +112,7 @@
                 <img src="img/view_icon.png" alt="" class="view_icon">
             </div>
 
-            <div class="single_column">
+            <div class="single_column col_last">
                 <img src="img/full_support.png" alt="">
                 <h2>Ful Support</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt rerum magni possimus quod et, alias vel quo, perspiciatis aliquid, sint assumenda! Doloribus culpa quas vero enim necessitatibus amet! Vitae, animi!</p>
