adding extra classes

--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
 
 <!--about us-->
 
-<div class="container_full">
+<div class="container_full content_wrapper_bg">
     <div class="fix container">
         <div class="content_wrapper">
-            <div class="content_left">
+            <div class="content_left floatleft">
                 <article id="about_us">
                     <h2 class="about_us_h2">About Us</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, error totam! Libero quibusdam minus, fuga nisi blanditiis alias cupiditate hic asperiores nam ratione? Harum, minus pariatur. Earum laborum soluta repellat.</p>
@@ -136,7 +136,7 @@
                 </article>
             </div>
 
-            <div class="content_right">
+            <div class="content_right floatright">
                 <h2 class="content_right_h2">Latest Work</h2>
                 <ul>
                     <li>
