--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 </article>
             </div>
 
-            <div class="content_right floatright">
+            <div class="content_right floatleft">
                 <h2 class="content_right_h2">Latest Work</h2>
                 <ul>
                     <li>
