--- a/index.html
+++ b/index.html
@@ -95,28 +95,28 @@
                 <img src="img/gift_box.png" alt="">
                 <h2>Package Design</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt rerum magni possimus quod et, alias vel quo, perspiciatis aliquid, sint assumenda! Doloribus culpa quas vero enim necessitatibus amet! Vitae, animi!</p>
-                <img src="img/view_icon.png" alt="" class="view_icon">
+                <a href="#"> <img src="img/view_icon.png" alt="" class="view_icon"></a>
             </div>
 
             <div class="single_column">
                 <img src="img/web_design.png" alt="">
                 <h2>Web Design</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt rerum magni possimus quod et, alias vel quo, perspiciatis aliquid, sint assumenda! Doloribus culpa quas vero enim necessitatibus amet! Vitae, animi!</p>
-                <img src="img/view_icon.png" alt="" class="view_icon">
+                <a href="#"> <img src="img/view_icon.png" alt="" class="view_icon"></a>
             </div>
 
             <div class="single_column">
                 <img src="img/bag_icon.png" alt="">
                 <h2>E-Commerce</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt rerum magni possimus quod et, alias vel quo, perspiciatis aliquid, sint assumenda! Doloribus culpa quas vero enim necessitatibus amet! Vitae, animi!</p>
-                <img src="img/view_icon.png" alt="" class="view_icon">
+                <a href="#"> <img src="img/view_icon.png" alt="" class="view_icon"></a>
             </div>
 
             <div class="single_column col_last">
                 <img src="img/full_support.png" alt="">
                 <h2>Ful Support</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt rerum magni possimus quod et, alias vel quo, perspiciatis aliquid, sint assumenda! Doloribus culpa quas vero enim necessitatibus amet! Vitae, animi!</p>
-                <img src="img/view_icon.png" alt="" class="view_icon">
+                <a href="#"> <img src="img/view_icon.png" alt="" class="view_icon"></a>
             </div>
         </div>
     </div>
