added class to div

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
 <!--footer top-->
 
-<div class="container_full">
+<div class="container_full footer_top_bg">
     <div class="fix container">
         <div class="footer_top">
             <div class="single_footer_area">
