--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     <div class="fix container">
         <div class="footer_top">
             <div class="single_footer_area">
-                <h2>Recent Post</h2>
+                <h2 class="frst_h2_1">Recent Post</h2>
                 <ul>
                     <li>
                         <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
@@ -196,7 +196,7 @@
             </div>
 
             <div class="single_footer_area">
-                <h2>Archives</h2>
+                <h2 class="frst_h2_2">Archives</h2>
                 <ul>
                     <li>
                         <a href="#">January 2020</a>
@@ -220,7 +220,7 @@
             </div>
 
             <div class="single_footer_area">
-                <h2>Twitter</h2>
+                <h2 class="frst_h2_3">Twitter</h2>
                 <div class="twitter_section">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, deserunt <a href="#">http://bit.ly/abcdefg</a> inventore expedita eveniet laborum necessitatibus libero perspiciatis eaque exercitationem doloremque
                         <a href="#">3 hours ago</a>
