removed middle named class

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 </ul>
             </div>
 
-            <div class="single_footer_area area_middle_2">
+            <div class="single_footer_area">
                 <h2 class="frst_h2_3">Twitter</h2>
                 <div class="twitter_section">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, deserunt <a href="#">http://bit.ly/abcdefg</a> inventore expedita eveniet laborum necessitatibus libero perspiciatis eaque exercitationem doloremque
