--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 <!---footer-->
 
 
-<div class="container_full">
+<div class="container_full main_footer_bg">
     <div class="fix container">
         <footer id="footer">
             <div class="left_footer">
